--- a/static/less/bill.less
+++ b/static/less/bill.less
@@ -1,8 +1,8 @@
-#quote-accordion {
+#bill-accordion {
     margin-top: 2rem;
 }
-#h-sales-quote-form{
-    #h-sales-quote-form-body {
+#h-sales-bill-form{
+    #h-sales-bill-form-body {
         .content-title {
             font-weight: bold;
         }
